Migrate bot from Java 11 to 21, implement production logic, fix Sonar issues